stuck on personal message bug

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -32,6 +32,7 @@
   overflow: auto;
   border: 1px solid black;
   font-size: 12px;
+  padding: 3px;
 }
 
 #connectedUsersContainer {
